# workspaces/liferay-testray-workspace/modules/testray-rest-impl/rest-openapi.yaml
@@ -40,6 +40,55 @@ components:
                 testrayStatusMetric:
                     $ref: "#/components/schemas/TestrayStatusMetric"
             type: object
+        TestrayCaseResult:
+            properties:
+                actions:
+                    additionalProperties:
+                        additionalProperties:
+                            type: string
+                        type: object
+                    readOnly: true
+                    type: object
+                comment:
+                    type: string
+                error:
+                    type: string
+                executionDate:
+                    type: string
+                gitHash:
+                    type: string
+                issues:
+                    type: string
+                priority:
+                    format: int64
+                    type: integer
+                status:
+                    type: string
+                testrayCaseName:
+                    type: string
+                testrayCaseResultId:
+                    format: int64
+                    type: integer
+                testrayCaseTypeName:
+                    type: string
+                testrayComponentName:
+                    type: string
+                testrayProductVersionName:
+                    type: string
+                testrayRoutineName:
+                    type: string
+                testrayRunName:
+                    type: string
+                testrayRunNumber:
+                    format: int64
+                    type: integer
+                testrayTeamName:
+                    type: string
+                testrayUserName:
+                    type: string
+                warning:
+                    type: integer
+            type: object
         TestrayCaseResultComparison:
             properties:
                 error1:
@@ -235,6 +284,162 @@ paths:
                             schema:
                                 $ref: "#/components/schemas/TestrayBuildAutofill"
             tags: ["TestrayBuildAutofill"]
+    "/testray-case-result/by-testray-buildId/{testrayBuildId}":
+        get:
+            operationId: getTestrayCaseResultByTestrayBuildIdTestrayBuildPage
+            parameters:
+                - in: path
+                  name: testrayBuildId
+                  required: true
+                  schema:
+                      format: int64
+                      type: integer
+                - in: query
+                  name: comment
+                  schema:
+                      type: string
+                - in: query
+                  name: error
+                  schema:
+                      type: string
+                - in: query
+                  name: issues
+                  schema:
+                      type: string
+                - in: query
+                  name: page
+                  schema:
+                      type: integer
+                - in: query
+                  name: pageSize
+                  schema:
+                      type: integer
+                - in: query
+                  name: priority
+                  schema:
+                      type: string
+                - in: query
+                  name: status
+                  schema:
+                      type: string
+                - in: query
+                  name: testrayCaseName
+                  schema:
+                      type: string
+                - in: query
+                  name: testrayCaseTypeIds
+                  schema:
+                      type: string
+                - in: query
+                  name: testrayComponentIds
+                  schema:
+                      type: string
+                - in: query
+                  name: testrayRunId
+                  schema:
+                      type: string
+                - in: query
+                  name: testrayRunName
+                  schema:
+                      type: string
+                - in: query
+                  name: testrayTeamIds
+                  schema:
+                      type: string
+                - in: query
+                  name: testrayUserId
+                  schema:
+                      type: string
+            responses:
+                200:
+                    content:
+                        application/json:
+                            schema:
+                                items:
+                                    $ref: "#/components/schemas/TestrayCaseResult"
+                                type: array
+                        application/xml:
+                            schema:
+                                items:
+                                    $ref: "#/components/schemas/TestrayCaseResult"
+                                type: array
+            tags: ["TestrayCaseResult"]
+    "/testray-case-result/by-testray-caseId/{testrayCaseId}":
+        get:
+            operationId: getTestrayCaseResultByTestrayCaseIdTestrayCasePage
+            parameters:
+                - in: path
+                  name: testrayCaseId
+                  required: true
+                  schema:
+                      format: int64
+                      type: integer
+                - in: query
+                  name: error
+                  schema:
+                      type: string
+                - in: query
+                  name: issues
+                  schema:
+                      type: string
+                - in: query
+                  name: maxExecutionDate
+                  schema:
+                      type: string
+                - in: query
+                  name: minExecutionDate
+                  schema:
+                      type: string
+                - in: query
+                  name: page
+                  schema:
+                      type: integer
+                - in: query
+                  name: pageSize
+                  schema:
+                      type: integer
+                - in: query
+                  name: status
+                  schema:
+                      type: string
+                - in: query
+                  name: testrayProductVersionIds
+                  schema:
+                      type: string
+                - in: query
+                  name: testrayRoutineIds
+                  schema:
+                      type: string
+                - in: query
+                  name: testrayRunName
+                  schema:
+                      type: string
+                - in: query
+                  name: testrayTeamIds
+                  schema:
+                      type: string
+                - in: query
+                  name: testrayUserId
+                  schema:
+                      type: string
+                - in: query
+                  name: warning
+                  schema:
+                      type: string
+            responses:
+                200:
+                    content:
+                        application/json:
+                            schema:
+                                items:
+                                    $ref: "#/components/schemas/TestrayCaseResult"
+                                type: array
+                        application/xml:
+                            schema:
+                                items:
+                                    $ref: "#/components/schemas/TestrayCaseResult"
+                                type: array
+            tags: ["TestrayCaseResult"]
     "/testray-run-comparisons/by-testray-routineId/{testrayRoutineId}":
         get:
             operationId: getTestrayRunComparisonByTestrayRoutineIdTestrayRoutine
